[project]
name = "bop-toolkit-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT license"}
authors = [
    { name = "Simon Thimm", email = "2023463@stud.hs-mannheim.de" }
]
requires-python = ">=3.8"
dependencies = [
    "imageio>=2.35.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyopengl>=3.1.9",
    "pypng>=0.20220715.0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.2",
    "scikit-image>=0.21.0",
    "scipy>=1.10.1",
    "vispy>=0.14.2",
    "webdataset>=0.2.100",
]

[project.optional-dependencies]
eval_coco = ["pycocotools@git+https://github.com/MartinSmeyer/cocoapi.git#subdirectory=PythonAPI"]
eval_gpu = ["torch"]
eval_hot3d = ["hand_tracking_toolkit@git+https://github.com/facebookresearch/hand_tracking_toolkit"]
scripts = [
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.7.5",
    "trimesh>=4.6.11",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
test = "test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
